Header contact details: wrapping h4 replaced with span tag

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -175,6 +175,15 @@ header {
 			clear: right
 		}
 
+		header .contact-details-inner {
+  			margin-top: 10px;
+  			font-size: 18px;
+  			font-family: "Open Sans";
+  			font-weight: 500;
+  			line-height: 1.1;
+  			display: inline-block;
+		} 
+
 
 /**
  * Primary navigation
